:bug: fix: contract page display wrong position

--- a/src/Card.css
+++ b/src/Card.css
@@ -568,3 +568,8 @@ html {
 .section {
     padding: unset;
 }
+
+
+.container {
+  flex-grow: unset;
+}
